# token-core-monorepo

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  README.zh.md  VERSION  dependency-upgrade-list.md  rust-toolchain.toml
ikc/: Cargo.toml
ikc/src/: bch_address.rs  bch_signer.rs  btc_address.rs  btc_fork_address.rs  btc_fork_signer.rs  btc_signer.rs  device_manager.rs  eos_signer.rs  ethereum_signer.rs  filecoin_signer.rs  ikc.rs  lib.rs  nervos_address.rs  nervos_signer.rs  substrate_signer.rs
imkey-core/ikc/: Cargo.toml
imkey-core/ikc-common/: Cargo.toml
imkey-core/ikc-common/src/: aes.rs  apdu.rs  applet.rs  coin_info.rs  common.rs  constants.rs  curve.rs  error.rs  hex.rs  https.rs  lib.rs  path.rs  utility.rs
imkey-core/ikc-device/: Cargo.toml
imkey-core/ikc-device/src/: app_delete.rs  app_download.rs  app_update.rs  auth_code_storage.rs  ble_check_update.rs  ble_upgrade.rs  cos_check_update.rs  cos_upgrade.rs  device_binding.rs  device_cert_check.rs  device_manager.rs  deviceapi.rs  error.rs  key_manager.rs  lib.rs  se_activate.rs  se_query.rs  se_secure_check.rs
imkey-core/ikc-transport/: Cargo.toml
imkey-core/ikc-transport/src/: error.rs  hid_api.rs  lib.rs  message.rs
imkey-core/ikc-wallet/coin-bitcoin/: Cargo.toml
imkey-core/ikc-wallet/coin-bitcoin/src/: address.rs  btc_kin_address.rs  btcapi.rs  common.rs  lib.rs  message.rs  network.rs  psbt.rs  transaction.rs  usdt_transaction.rs
imkey-core/ikc-webusb/: Cargo.toml  index.html
imkey-core/ikc-webusb/src/: lib.rs  webusb.rs
imkey-core/ikc/src/: api.rs  bch_address.rs  bch_signer.rs  btc_address.rs  btc_fork_address.rs  btc_fork_signer.rs  btc_signer.rs  cosmos_address.rs  cosmos_signer.rs  device_manager.rs  eos_pubkey.rs  error_handling.rs  ethereum_address.rs  ethereum_signer.rs  filecoin_address.rs  handler.rs  ikc.rs  lib.rs  nervos_address.rs  substrate_address.rs  tezos_signer.rs  ton_address.rs  ton_signer.rs  tron_address.rs  tron_signer.rs
imkey-core/ikc/tests/: eth_batch_sign_tx_test.rs  sign_txs_test.rs
token-core/tcx/: Cargo.toml
token-core/tcx-atom/: Cargo.toml
token-core/tcx-atom/src/: address.rs  hrps.rs  lib.rs  signer.rs  transaction.rs
token-core/tcx-btc-kin/: Cargo.toml
token-core/tcx-btc-kin/src/: address.rs  bch_address.rs  bch_sighash.rs  bip143_with_forkid.rs  bitcoin_cash_sighash.rs  lib.rs  message.rs  network.rs  psbt.rs  sighash.rs  signer.rs  transaction.rs
token-core/tcx-ckb/: Cargo.toml
token-core/tcx-ckb/src/: address.rs  hash.rs  lib.rs  serializer.rs  signer.rs  transaction.rs  transaction_helper.rs
token-core/tcx-common/: Cargo.toml
token-core/tcx-common/src/: errors.rs  hash.rs  hex.rs  lib.rs  rand.rs  sample.rs  time.rs  uint.rs  util.rs  utility.rs
token-core/tcx-constants/: Cargo.toml
token-core/tcx-constants/src/: btc_fork_network.rs  coin_info.rs  curve.rs  lib.rs  sample_key.rs
token-core/tcx-crypto/: Cargo.toml
token-core/tcx-crypto/src/: aes.rs  crypto.rs  hash.rs  hex.rs  lib.rs
token-core/tcx-eos/: Cargo.toml
token-core/tcx-eos/src/: address.rs  chain_factory.rs  lib.rs  signer.rs  transaction.rs
token-core/tcx-eth/: Cargo.toml
token-core/tcx-eth/src/: address.rs  lib.rs  signer.rs  transaction.rs  transaction_types.rs
token-core/tcx-eth2/: Cargo.toml
token-core/tcx-eth2/src/: address.rs  bls_to_execution_change.rs  lib.rs  signer.rs  transaction.rs
token-core/tcx-filecoin/: Cargo.toml
token-core/tcx-filecoin/src/: address.rs  key_info.rs  lib.rs  signer.rs  transaction.rs  utils.rs
token-core/tcx-keystore/: Cargo.toml
token-core/tcx-keystore/src/: identity.rs  lib.rs  signer.rs
token-core/tcx-keystore/src/keystore/: guard.rs  hd.rs  mod.rs  private.rs
token-core/tcx-migration/: Cargo.toml
token-core/tcx-migration/src/: keystore_upgrade.rs  legacy_ipfs.rs  lib.rs  migration.rs
token-core/tcx-migration/test/fixtures/: 5991857a-2488-4546-b730-463a5f84ea6a  b05a0ff9-885a-4a31-9d82-6477d34d1e37.json
token-core/tcx-migration/tests/: migrate_test.rs
token-core/tcx-migration/tests/fixtures/: 045861fe-0e9b-4069-92aa-0ac03cad55e1.json  5991857a-2488-4546-b730-463a5f84ea6a  6f8c2912-ebe8-4359-90f4-f1d1f1af1e4d  b05a0ff9-885a-4a31-9d82-6477d34d1e37.json
token-core/tcx-migration/tests/fixtures/android-2911/: 04f85091-cf07-4761-8149-19c8e7dd39c5.json  identity.json  (+26 more)
token-core/tcx-primitive/: Cargo.toml
token-core/tcx-primitive/src/: bip32.rs  bls.rs  bls_derive.rs  bls_stub.rs  constant.rs  derive.rs  ecc.rs  ed25519.rs  ed25519_bip32.rs  ed25519_stub.rs  lib.rs  rand.rs  secp256k1.rs  sr25519.rs  sr25519_stub.rs  subkey.rs
token-core/tcx-proto/: Cargo.toml  build.rs
token-core/tcx-proto/src/: api.proto  atom.proto  btc_fork.proto  btc_kin.proto  eos.proto  eth.proto  eth2.proto  keystore_migration.proto  params.proto  substrate.proto  ton.proto  tron.proto  wallet_api.proto
token-core/tcx-substrate/: Cargo.toml
token-core/tcx-substrate/src/: address.rs  keystore.rs  lib.rs  signer.rs  transaction.rs
token-core/tcx-tezos/: Cargo.toml
token-core/tcx-tezos/src/: address.rs  lib.rs  signer.rs  transaction.rs
token-core/tcx-ton/: Cargo.toml
token-core/tcx-ton/src/: address.rs  lib.rs  signer.rs  transaction.rs
token-core/tcx-tron/: Cargo.toml
token-core/tcx-tron/src/: address.rs  lib.rs  signer.rs  transaction.rs
token-core/tcx-wallet/: Cargo.toml
token-core/tcx-wallet/src/: constants.rs  identity.rs  imt_keystore.rs  lib.rs  model.rs  v3_keystore.rs  wallet_api.rs  wallet_manager.rs
token-core/tcx-wasm/: Cargo.toml  README.md  README.zh-CN.md
token-core/tcx-wasm/src/: lib.rs  nostr.rs  types.rs
token-core/tcx/src/: api.rs  error_handling.rs  filemanager.rs  handler.rs  identity.rs  lib.rs  macros.rs  migration.rs  reset_password.rs
token-core/tcx/tests/: derive_test.rs  exists_delete_test.rs  export_test.rs  import_test.rs  integration_test.rs  migration_test.rs  other_test.rs  sign_test.rs
token-core/tcx/tests/common/: mod.rs
web-core/: Cargo.toml  demo.html  test.html
web-core/src/: crypto.rs  fido.rs  lib.rs  wallet.rs
web-core/tests/: web.rs
(+424 files in other folders)
