[workspace]
members=[
    "tcx-proto",
    "tcx-constants",
    "tcx-primitive",
    "tcx-crypto",
    "tcx-chain",
    "tcx-tron",
    "tcx-btc-fork",
    "tcx-bch",
    "tcx-ckb",
    "tcx-substrate",
    "tcx-filecoin",
    "tcx",
    "tcx-tezos",
    "tcx-tester",
    "ikc",
    "ikc-common",
    "ikc-device",
    "ikc-proto",
    "ikc-transport",
    "ikc-wallet/coin-bitcoin",
    "ikc-wallet/coin-ethereum",
    "ikc-wallet/coin-eos",
    "ikc-wallet/coin-cosmos",
    "ikc-wallet/coin-ckb",
    "ikc-wallet/coin-substrate",
    "ikc-wallet/coin-tron",
    "ikc-wallet/coin-tezos",
    "ikc-wallet/coin-bch",
    "ikc-wallet/coin-filecoin",
    "ikc-wallet/coin-btc-fork",
]