[workspace]
members=[
    "token-core/tcx-proto",
    "token-core/tcx-constants",
    "token-core/tcx-primitive",
    "token-core/tcx-crypto",
    "token-core/tcx-chain",
    "token-core/tcx-tron",
    "token-core/tcx-btc-fork",
    "token-core/tcx-bch",
    "token-core/tcx-ckb",
    "token-core/tcx-substrate",
    "token-core/tcx-filecoin",
    "token-core/tcx",
    "token-core/tcx-tezos",
    "token-core/tcx-tester",
    "imkey-core/ikc",
    "imkey-core/ikc-common",
    "imkey-core/ikc-device",
    "imkey-core/ikc-proto",
    "imkey-core/ikc-transport",
    "imkey-core/ikc-wallet/coin-bitcoin",
    "imkey-core/ikc-wallet/coin-ethereum",
    "imkey-core/ikc-wallet/coin-eos",
    "imkey-core/ikc-wallet/coin-cosmos",
    "imkey-core/ikc-wallet/coin-ckb",
    "imkey-core/ikc-wallet/coin-substrate",
    "imkey-core/ikc-wallet/coin-tron",
    "imkey-core/ikc-wallet/coin-tezos",
    "imkey-core/ikc-wallet/coin-bch",
    "imkey-core/ikc-wallet/coin-filecoin",
    "imkey-core/ikc-wallet/coin-btc-fork",
]