[package]
name = "api"
version = "0.1.0"
authors = ["wyoyw <wyoyw@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

log = {version = "0.4.17", features = ["std"]}
ikc-transport = {path = "../ikc-transport"}
ikc-device = {path = "../ikc-device"}
coin-ethereum = {path = "../ikc-wallet/coin-ethereum"}
coin-bitcoin = {path = "../ikc-wallet/coin-bitcoin"}
coin-eos = {path = "../ikc-wallet/coin-eos"}
coin-cosmos = {path = "../ikc-wallet/coin-cosmos"}
coin-filecoin = {path = "../ikc-wallet/coin-filecoin"}
coin-substrate = {path = "../ikc-wallet/coin-substrate"}
coin-tron = {path = "../ikc-wallet/coin-tron"}
coin-ckb = {path = "../ikc-wallet/coin-ckb"}
coin-bch = {path = "../ikc-wallet/coin-bch"}
coin-btc-fork = {path = "../ikc-wallet/coin-btc-fork"}

ikc-common = {path = "../ikc-common"}
coin-tezos = {path = "../ikc-wallet/coin-tezos"}
bitcoin = "0.29.2"
ethereum-types = "0.14.0"
prost = "0.11.2"
bytes = "1.3.0"
prost-types = "0.11.2"
hex = "0.4.3"
failure = "0.1.8"
linked-hash-map = { version = "0.5", features = ["serde_impl"] }
serde_json = { version = "1.0.89", default-features = false, features = ["alloc"] }
base64 = "0.13.1"
parking_lot = "0.12.1"

[lib]
name="connector"
crate-type=["staticlib","cdylib"]
#
#[target.aarch64-linux-android.dependencies]
#openssl = { version = "*", features = ["vendored"] }
#[target.armv7-linux-androideabi.dependencies]
#openssl = { version = "*", features = ["vendored"] }
#[target.i686-linux-android.dependencies]
#openssl = { version = "*", features = ["vendored"] }
#[target.x86_64-linux-android.dependencies]
#openssl = { version = "*", features = ["vendored"] }