[package]
name = "web-core"
version = "0.1.0"
edition = "2021"
description = "Web wallet core: BIP39/BIP44, secp256k1, FIDO/PRF — compiled to WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM interop
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# Crypto (pure Rust, WASM-compatible)
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
bip32 = { version = "0.5", features = ["secp256k1"] }
tiny-bip39 = "2.0"
sha2 = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
hex = "0.4"
base64 = "0.22"

# Random number source for WASM (routes to crypto.getRandomValues)
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Navigator",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
