[package]
name = "ikc-common"
version = "0.1.0"
authors = ["wyoyw <wyoyw@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "=0.14.23", features = ["full"] }
hyper-tls = "=0.5.0"
hyper-timeout = "=0.4.1"
rustc-serialize = "=0.3.24"
serde = { version = "=1.0.147", features = ["derive"] }
serde_derive = "=1.0.147"
serde_json = "=1.0.89"
hex = "=0.4.3"
tokio = { version = "=1.28.2", features = ["full"] }
regex = "=1.9.3"
num-bigint = "=0.4.3"
num-traits = "=0.2.15"
num-integer = "=0.1.45"
prost = "=0.11.2"
bytes = "=1.4.0"
prost-types = "=0.11.2"
secp256k1 = {version = "=0.24.3", features = ["rand", "recovery"] }
failure = "=0.1.8"
lazy_static = "=1.4.0"
aes = "=0.8.3"
cbc = "=0.1.2"
parking_lot = "=0.12.1"
bitcoin = "=0.29.2"
