[package]
name = "ikc-device"
version = "0.1.0"
authors = ["wyoyw <wyoyw@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ikc-common = {path = "../ikc-common"}
ikc-transport = {path = "../ikc-transport"}
serde = { version = "=1.0.228", features = ["derive"] }
serde_derive = "=1.0.228"
serde_json = "=1.0.149"
base64 = "=0.22.1"
hex = "=0.4.3"
secp256k1 = {version = "=0.31.1", features = ["rand", "recovery"] }
rand = "=0.10.1"
sha1 = "=0.11.0"
rsa = { version = "=0.9.10", features = ["getrandom"] }
lazy_static = "=1.5.0"
regex = "=1.12.3"
anyhow = "=1.0.102"
log = {version = "=0.4.29", features = ["std"]}
prost = "=0.14.3"
prost-types = "=0.14.3"
bytes = "=1.11.1"
parking_lot = "=0.12.5"
thiserror = "=2.0.18"
