[package]
name = "ikc-transport"
version = "0.1.0"
authors = ["wyoyw <wyoyw@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "=0.12.5"
lazy_static = "=1.5.0"
hex = "=0.4.3"
anyhow = "=1.0.102"
thiserror = "=2.0.18"
[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
hidapi = "=2.6.6"
[dev-dependencies.cargo-husky]
version = "=1.5.0"
default-features = false
features = ["precommit-hook", "run-cargo-fmt"]