[package]
name = "ikc-webusb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.93", features = ["serde-serialize"] }
web-sys = { version = "0.3.70", features = ["Usb", "UsbDevice", "Window", "WebTransport", "Navigator", "Serial", "UsbDeviceRequestOptions", "console", "UsbDeviceFilter", "UsbConfiguration", "UsbInterface"] }
serde_json = "1.0.89"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3.0"
serde-wasm-bindgen = "0.3"
lazy_static = "=1.4.0"
parking_lot = "=0.12.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
