[package]
name = "ikc"
version = "0.1.0"
authors = ["wyoyw <wyoyw@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "=1.5.0"

log = {version = "=0.4.29", features = ["std"]}
ikc-transport = {path = "../ikc-transport"}
ikc-device = {path = "../ikc-device"}
coin-ethereum = {path = "../ikc-wallet/coin-ethereum"}
coin-bitcoin = {path = "../ikc-wallet/coin-bitcoin"}
coin-eos = {path = "../ikc-wallet/coin-eos"}
coin-cosmos = {path = "../ikc-wallet/coin-cosmos"}
coin-filecoin = {path = "../ikc-wallet/coin-filecoin"}
coin-substrate = {path = "../ikc-wallet/coin-substrate"}
coin-tron = {path = "../ikc-wallet/coin-tron"}
coin-ckb = {path = "../ikc-wallet/coin-ckb"}
coin-bch = {path = "../ikc-wallet/coin-bch"}
coin-btc-fork = {path = "../ikc-wallet/coin-btc-fork"}

ikc-common = {path = "../ikc-common"}
coin-tezos = {path = "../ikc-wallet/coin-tezos"}
bitcoin = "=0.32.9"
ethereum-types = "=0.16.0"
prost = "=0.14.3"
bytes = "=1.11.1"
prost-types = "=0.14.3"
hex = "=0.4.3"
anyhow = "=1.0.102"
linked-hash-map = { version = "=0.5.6", features = ["serde_impl"] }
serde_json = { version = "=1.0.149", default-features = false, features = ["alloc"] }
base64 = "=0.22.1"
parking_lot = "=0.12.5"

[lib]
name="connector"
crate-type=["staticlib","cdylib"]
#
#[target.aarch64-linux-android.dependencies]
#openssl = { version = "*", features = ["vendored"] }
#[target.armv7-linux-androideabi.dependencies]
#openssl = { version = "*", features = ["vendored"] }
#[target.i686-linux-android.dependencies]
#openssl = { version = "*", features = ["vendored"] }
#[target.x86_64-linux-android.dependencies]
#openssl = { version = "*", features = ["vendored"] }
