[package]
name = "tcx-atom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcx-crypto = { path = "../tcx-crypto" }
tcx-keystore = { path = "../tcx-keystore" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-constants = { path = "../tcx-constants" }
tcx-common = { path = "../tcx-common" }

bech32 = "=0.9.1"
anyhow = { version = "=1.0.79", features = [] }

prost = "=0.11.2"
bytes = "=1.4.0"
base64 = "=0.13.1"
lazy_static = "1.4.0"