[package]
name = "tcx-atom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcx-crypto = { path = "../tcx-crypto" }
tcx-keystore = { path = "../tcx-keystore" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-constants = { path = "../tcx-constants" }
tcx-common = { path = "../tcx-common" }

bech32 = "=0.11.1"
anyhow = { version = "=1.0.102", features = [] }

prost = "=0.14.3"
bytes = "=1.11.1"
base64 = "=0.22.1"
lazy_static = "=1.5.0"
