[package]
name = "tcx-btc-kin"
version = "0.1.0"
authors = ["Neal Xu <imxuneal@gmail.com>"]
edition = "2021"

[dependencies]
tcx-crypto = { path = "../tcx-crypto" }
tcx-keystore = { path = "../tcx-keystore" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-constants = { path = "../tcx-constants" }
tcx-common = { path = "../tcx-common" }

hex = "=0.4.3"
base64 = "=0.13.1"

bitcoin = {version = "=0.29.2", features = ["serde", "std", "secp-recovery"] }
secp256k1 = {version ="=0.24.3", features = ["rand", "recovery", "rand-std"] }
tiny-bip39 = "=1.0.0"
bitcoin_hashes = "=0.11.0"
#bitcoinconsensus = { version = "0.19.0-2", optional = true }
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "=1.0.89"
uuid = { version = "=1.2.2", features = ["serde", "v4"] }
anyhow = { version = "=1.0.79", features = [] }
num-bigint = "=0.4.3"
num-traits = "=0.2.19"
num-integer = "=0.1.45"
byteorder = "=1.4.3"
bech32 = "=0.9.1"
prost = "=0.11.2"
bytes = "=1.4.0"
prost-types = "=0.11.2"
bch_addr = "=0.1.0"
thiserror = "=1.0.56"

[dev-dependencies]
mockall = "=0.11.3"
