[package]
name = "tcx-btc-kin"
version = "0.1.0"
authors = ["Neal Xu <imxuneal@gmail.com>"]
edition = "2021"

[dependencies]
tcx-crypto = { path = "../tcx-crypto" }
tcx-keystore = { path = "../tcx-keystore" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-constants = { path = "../tcx-constants" }
tcx-common = { path = "../tcx-common" }

hex = "=0.4.3"
base64 = "=0.22.1"

bitcoin = {version = "=0.32.9", features = ["serde", "std", "secp-recovery"] }
secp256k1 = {version = "=0.31.1", features = ["rand", "recovery"] }
tiny-bip39 = "=2.0.0"
bitcoin_hashes = "=0.20.0"
#bitcoinconsensus = { version = "0.19.0-2", optional = true }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
uuid = { version = "=1.23.1", features = ["serde", "v4"] }
anyhow = { version = "=1.0.102", features = [] }
num-bigint = "=0.4.6"
num-traits = "=0.2.19"
num-integer = "=0.1.46"
byteorder = "=1.5.0"
bech32 = "=0.11.1"
prost = "=0.14.3"
bytes = "=1.11.1"
prost-types = "=0.14.3"
bch_addr = "=0.1.0"
thiserror = "=2.0.18"

[dev-dependencies]
mockall = "=0.14.0"
