[package]
name = "tcx-ckb"
version = "0.1.0"
authors = ["tyrone <2125081@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcx-crypto = { path = "../tcx-crypto" }
tcx-keystore = { path = "../tcx-keystore" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-constants = { path = "../tcx-constants" }
tcx-common = { path = "../tcx-common"}

prost = "=0.11.2"
bytes = "=1.4.0"
blake2b-rs = "=0.2.0"
anyhow = { version = "=1.0.79", features = [] }
byteorder = "=1.4.3"
bech32 = "=0.9.1"

hex = "=0.4.3"
lazy_static = "=1.4.0"
thiserror = "=1.0.56"

