[package]
name = "tcx-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
hex = "0.4.3"
regex = "1.7.0"
keccak-hash = "0.10.0"
sha2 = "0.10.6"
hmac-sha256 = "1.1.6"
rust-crypto = "0.2.36"
ctr = "0.9.2"
aes = "0.8.3"
secp256k1 = "0.27.0"
bitcoin = "0.29.2"
tiny-bip39 = "1.0.0"