[package]
name = "tcx-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "=0.1.8"
hex = "=0.4.3"
regex = "=1.9.3"
keccak-hash = "=0.10.0"
ctr = "=0.9.2"
aes = "=0.8.3"
secp256k1 = "=0.24.3"
bitcoin = "=0.29.2"
tiny-bip39 = "=0.7.3"
rand = "=0.8.5"