[package]
name = "tcx-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "=1.0.102", features = [] }
hex = "=0.4.3"
regex = "=1.12.3"
keccak-hash = "=0.12.0"
ctr = "=0.10.1"
aes = "=0.9.0"
secp256k1 = "=0.31.1"
bitcoin = "=0.32.9"
tiny-bip39 = "=2.0.0"
rand = "=0.10.1"
ethereum-types = "=0.16.0"
thiserror = "=2.0.18"
