[package]
name = "tcx-constants"
version = "0.1.0"
authors = ["Neal Xu <imxuneal@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcx-common = { path = "../tcx-common" }
anyhow = { version = "=1.0.79", features = [] }
lazy_static = "=1.4.0"
serde_json = "=1.0.89"
serde = { version = "=1.0.210", features = ["derive"] }
parking_lot = "=0.12.1"
