[package]
name = "tcx-crypto"
version = "0.1.0"
authors = ["Neal Xu <imxuneal@gmail.com>"]
edition = "2021"

[dependencies]
tcx-constants = {path="../tcx-constants"}
tcx-common = {path="../tcx-common"}

serde_json = "=1.0.149"
serde = { version = "=1.0.228", features = ["derive"] }
rand = "=0.8.6"
tiny-keccak = { version = "=2.0.2", features = ["keccak"] }
scrypt = { version = "=0.12.0", default-features = false }
sha2 = "=0.11.0"
digest = "=0.11.3"
hmac = "=0.13.0"
aes = "=0.9.0"
ctr = "=0.10.1"
cbc = "=0.2.1"
pbkdf2 = "=0.13.0"
bitcoin_hashes = "=0.20.0"
crypto-mac = "=0.11.1"
anyhow = { version = "=1.0.102", features = [] }
secp256k1 = {version = "=0.31.1", features = ["rand", "recovery"] }
hex = "=0.4.3"
lazy_static = "=1.5.0"
regex = "=1.12.3"

parking_lot = "=0.12.5"
thiserror = "=2.0.18"

[features]
default = []
cache_dk = []
