[package]
name = "tcx-eos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcx-crypto = { path = "../tcx-crypto" }
tcx-keystore = { path = "../tcx-keystore" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-constants = { path = "../tcx-constants" }
tcx-common = {path = "../tcx-common"}

failure = "0.1.8"
regex = "1.9.3"
base58 = "0.2.0"

prost = "0.11.2"
bytes = "1.3.0"
base64 = "0.13.1"