[package]
name = "tcx-eth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcx-keystore = {path = "../tcx-keystore"}
tcx-primitive = {path = "../tcx-primitive"}
tcx-constants = {path = "../tcx-constants"}
tcx-common = {path = "../tcx-common"}

failure = "=0.1.8"
hex = "=0.4.3"
ethereum-types = "=0.14.0"
rlp = "=0.5.2"
prost = "=0.11.2"
prost-types = "=0.11.2"
regex = "=1.9.3"
secp256k1 = {version ="=0.24.3", features = ["rand", "recovery"] }
