[package]
name = "tcx-eth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcx-keystore = {path = "../tcx-keystore"}
tcx-primitive = {path = "../tcx-primitive"}
tcx-constants = {path = "../tcx-constants"}
tcx-common = {path = "../tcx-common"}

anyhow = { version = "=1.0.102", features = [] }
hex = "=0.4.3"
ethereum-types = "=0.16.0"
rlp = "=0.6.1"
prost = "=0.14.3"
prost-types = "=0.14.3"
regex = "=1.12.3"
secp256k1 = {version = "=0.31.1", features = ["rand", "recovery"] }
