[package]
name = "tcx-eth2"
version = "0.1.0"
authors = ["xiaoguang <xiaoguang101010@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcx-keystore = { path = "../tcx-keystore" }
tcx-constants = { path = "../tcx-constants" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-crypto = { path = "../tcx-crypto" }

hex = "0.3.1"
prost = "0.11.2"
bytes = "1.3.0"
lazy_static = "1.4.0"
prost-types = "0.11.2"
failure = "0.1.8"
regex = "1.7.0"
keccak-hash = "0.10.0"
ssz_rs = "0.8.0"
ssz_rs_derive = "0.8.0"