[package]
name = "tcx-eth2"
version = "0.1.0"
authors = ["xiaoguang <xiaoguang101010@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcx-common = { path = "../tcx-common" }
tcx-keystore = { path = "../tcx-keystore" }
tcx-constants = { path = "../tcx-constants" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-crypto = { path = "../tcx-crypto" }

prost = "=0.11.2"
bytes = "=1.4.0"
lazy_static = "=1.4.0"
prost-types = "=0.11.2"
anyhow = { version = "=1.0.79", features = [] }
regex = "=1.9.3"
keccak-hash = "=0.10.0"
ssz_rs = "=0.8.0"
ssz_rs_derive = "=0.8.0"
thiserror = "1.0.56"
