[package]
name = "tcx-eth2"
version = "0.1.0"
authors = ["xiaoguang <xiaoguang101010@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcx-common = { path = "../tcx-common" }
tcx-keystore = { path = "../tcx-keystore" }
tcx-constants = { path = "../tcx-constants" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-crypto = { path = "../tcx-crypto" }
tcx-eth = { path = "../tcx-eth" }

prost = "=0.14.3"
bytes = "=1.11.1"
lazy_static = "=1.5.0"
prost-types = "=0.14.3"
anyhow = { version = "=1.0.102", features = [] }
regex = "=1.12.3"
keccak-hash = "=0.12.0"
ssz_rs = "=0.9.0"
ssz_rs_derive = "=0.9.0"
thiserror = "=2.0.18"
