[package]
name = "tcx-filecoin"
version = "0.1.0"
authors = ["tyrone <2125081@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcx-crypto = { path = "../tcx-crypto" }
tcx-keystore = { path = "../tcx-keystore" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-constants = { path = "../tcx-constants" }
tcx-common = { path = "../tcx-common" }

prost = "=0.11.2"
bytes = "=1.4.0"
blake2b-rs = "=0.2.0"
anyhow = { version = "=1.0.79", features = [] }
byteorder = "=1.4.3"
base32 = "=0.4.0"
serde = { version = "=1.0.165", features = ["derive"] }
serde_json = "=1.0.89"
base64 = "=0.13.1"
lazy_static = "=1.4.0"
#forest_vm = "=0.3.2"
#forest_message = "=0.7.2"
#forest_address = "=0.3.2"
#forest_encoding = "=0.2.2"
#forest_cid = "=0.3.0"
#forest_crypto = "0.5.3"
thiserror = "=1.0.56"



multihash-codetable = { version = "=0.1.3", features = ["blake2b"] }
cid = "=0.11.1"
fvm_shared = "=4.3.1"
fvm_ipld_encoding = "0.4.0"
serde_tuple = "0.5.0"
strum_macros = "0.26.3"
strum = { version = "0.26.3", features = ["derive"] }
num-traits = "0.2.15"
num = "0.4.3"
num-derive = "0.4.2"