[package]
name = "tcx-filecoin"
version = "0.1.0"
authors = ["tyrone <2125081@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcx-crypto = { path = "../tcx-crypto" }
tcx-keystore = { path = "../tcx-keystore" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-constants = { path = "../tcx-constants" }
tcx-common = { path = "../tcx-common" }

prost = "=0.14.3"
bytes = "=1.11.1"
blake2b-rs = "=0.2.0"
anyhow = { version = "=1.0.102", features = [] }
byteorder = "=1.5.0"
base32 = "=0.5.1"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
base64 = "=0.22.1"
lazy_static = "=1.5.0"
forest_vm = "=0.3.2"
forest_address = "=0.3.2"
forest_encoding = "=0.2.2"
forest_cid = "=0.3.0"
num_bigint_chainsafe = { package = "forest_bigint", version = "=0.1.4" }
thiserror = "=2.0.18"
