[package]
name = "tcx-migration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
integration-tests = []


[dependencies]
tcx-proto = { path = "../tcx-proto" }
tcx-crypto = { path = "../tcx-crypto", features = ["cache_dk"] }
tcx-keystore = { path = "../tcx-keystore", features = ["cache_dk"] }
tcx-atom = { path = "../tcx-atom" }
tcx-eos = { path = "../tcx-eos" }
tcx-btc-kin = { path = "../tcx-btc-kin" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-constants = { path = "../tcx-constants" }
tcx-tezos = { path = "../tcx-tezos" }
tcx-tron = { path = "../tcx-tron" }
tcx-substrate = { path = "../tcx-substrate" }
tcx-filecoin = { path = "../tcx-filecoin" }
# tcx-eth2 = { path = "../tcx-eth2" }
tcx-eth = { path = "../tcx-eth" }
tcx-common = { path = "../tcx-common" }

prost = "=0.11.2"
bytes = "=1.4.0"
prost-types = "=0.11.2"

libc = "=0.2.140"
log = "=0.4.17"
serde_json = "=1.0.89"
serde = { version = "=1.0.147", features = ["derive"] }
anyhow = { version = "=1.0.79", features = [] }
lazy_static = "=1.4.0"
hex = "=0.4.3"
base64 = "=0.13.1"
base58 = "=0.2.0"
parking_lot = "=0.12.1"
uuid = { version = "=1.2.2", features = ["serde", "v4"] }
