[package]
name = "tcx-migration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
integration-tests = []


[dependencies]
tcx-proto = { path = "../tcx-proto" }
tcx-crypto = { path = "../tcx-crypto", features = ["cache_dk"] }
tcx-keystore = { path = "../tcx-keystore", features = ["cache_dk"] }
tcx-atom = { path = "../tcx-atom" }
tcx-eos = { path = "../tcx-eos" }
tcx-btc-kin = { path = "../tcx-btc-kin" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-constants = { path = "../tcx-constants" }
tcx-tezos = { path = "../tcx-tezos" }
tcx-tron = { path = "../tcx-tron" }
tcx-substrate = { path = "../tcx-substrate" }
tcx-filecoin = { path = "../tcx-filecoin" }
# tcx-eth2 = { path = "../tcx-eth2" }
tcx-eth = { path = "../tcx-eth" }
tcx-common = { path = "../tcx-common" }

prost = "=0.14.3"
bytes = "=1.11.1"
prost-types = "=0.14.3"

libc = "=0.2.186"
log = "=0.4.29"
serde_json = "=1.0.149"
serde = { version = "=1.0.228", features = ["derive"] }
anyhow = { version = "=1.0.102", features = [] }
lazy_static = "=1.5.0"
hex = "=0.4.3"
base64 = "=0.22.1"
base58 = "=0.2.0"
parking_lot = "=0.12.5"
uuid = { version = "=1.23.1", features = ["serde", "v4"] }
