[package]
name = "tcx-primitive"
version = "0.1.0"
authors = ["tyrone <2125081@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcx-constants = { path = "../tcx-constants"}
tcx-common = { path = "../tcx-common"}
ed25519-dalek-bip32 = { path = "../tcx-libs/ed25519-dalek-bip32" }

bitcoin = "=0.32.9"
byteorder = "=1.5.0"
secp256k1 = {version = "=0.31.1", features = ["rand", "recovery"] }
bitcoin_hashes = "=0.20.0"
hex-literal = "=1.1.0"
hex = "=0.4.3"
lazy_static = "=1.5.0"
anyhow = { version = "=1.0.102", features = [] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tiny-bip39 = "=2.0.0"
ed25519-bip32 = "=0.4.1"
ed25519-dalek = "=2.2.0"
blake2b_simd = "=1.0.4"
blst = "=0.3.16"
num-bigint = "=0.4.6"
num-traits = "=0.2.19"
sha2 = "=0.11.0"
digest = "=0.11.3"
hkdf = "=0.13.0"

sp-core = "=41.0.0"
regex = { version = "=1.12.3"}
schnorrkel = "=0.11.5"
thiserror = "=2.0.18"
