[package]
name = "tcx-proto"
version = "0.1.0"
authors = ["Neal Xu <imxuneal@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "=0.14.3"
bytes = "=1.11.1"
prost-types = "=0.14.3"

[lib]
name = "tcx_proto"


[build-dependencies]
prost-build = "=0.14.3"
