[package]
name = "tcx-substrate"
version = "0.1.0"
authors = ["Neal Xu <imxuneal@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcx-crypto = { path = "../tcx-crypto" }
tcx-keystore = { path = "../tcx-keystore" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-constants = { path = "../tcx-constants" }
tcx-common = { path = "../tcx-common" }

sp-core = "=7.0.0"
byteorder = "=1.4.3"

prost = "=0.11.2"
bytes = "=1.4.0"
prost-types = "=0.11.2"

base58 = "=0.2.0"
codec = { package = "parity-scale-codec", default-features = false, features = ["derive"] }
rand = "=0.8.5"

anyhow = { version = "=1.0.79", features = [] }
#tweetnacl = "0.2.1"
xsalsa20poly1305 = "=0.9.0"
serde_json = "=1.0.89"
serde = { version = "=1.0.147", features = ["derive"] }
base64 = "=0.13.1"
scrypt = { version = "=0.10.0", default-features = false }
regex = "=1.9.3"
schnorrkel = "=0.9.1"
thiserror = "=1.0.56"


[dev-dependencies]
sp-runtime = "=7.0.0"
sp-keyring = "=7.0.0"
