[package]
name = "tcx-substrate"
version = "0.1.0"
authors = ["Neal Xu <imxuneal@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcx-crypto = { path = "../tcx-crypto" }
tcx-keystore = { path = "../tcx-keystore" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-constants = { path = "../tcx-constants" }
tcx-common = { path = "../tcx-common" }

sp-core = "=41.0.0"
byteorder = "=1.5.0"

prost = "=0.14.3"
bytes = "=1.11.1"
prost-types = "=0.14.3"

base58 = "=0.2.0"
codec = { package = "parity-scale-codec", version = "=3.7.5", default-features = false, features = ["derive"] }
rand = "=0.10.1"

anyhow = { version = "=1.0.102", features = [] }
#tweetnacl = "0.2.1"
xsalsa20poly1305 = "=0.9.1"
serde_json = "=1.0.149"
serde = { version = "=1.0.228", features = ["derive"] }
base64 = "=0.22.1"
scrypt = { version = "=0.12.0", default-features = false }
regex = "=1.12.3"
schnorrkel = "=0.11.5"
thiserror = "=2.0.18"


[dev-dependencies]
sp-runtime = "=47.0.0"
sp-keyring = "=47.0.0"
