[package]
name = "tcx-ton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcx-keystore = { path = "../tcx-keystore" }
tcx-constants = { path = "../tcx-constants" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-crypto = { path = "../tcx-crypto" }
tcx-common = { path = "../tcx-common" }
tonlib-core = { path = "../tcx-libs/tonlib-core" }

anyhow = { version = "=1.0.79", features = [] }
prost = "=0.11.2"
prost-types = "=0.11.2"