[package]
name = "tcx-tron"
version = "0.1.0"
authors = ["tyrone <2125081@qq.com>"]
edition = "2021"

[dependencies]
tcx-crypto = { path = "../tcx-crypto" }
tcx-keystore = { path = "../tcx-keystore" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-constants = { path = "../tcx-constants" }
tcx-common = { path = "../tcx-common" }

prost = "=0.11.2"
bytes = "=1.4.0"

hex-literal = "=0.3.4"
bitcoin = "=0.29.2"
secp256k1 = {version = "=0.24.3", features = ["rand", "recovery"] }
tiny-bip39 = "=1.0.0"
bitcoin_hashes = "=0.11.0"
serde = { version = "=1.0.147", features = ["derive"] }
serde_json = "=1.0.89"
uuid = { version = "=1.2.2", features = ["serde", "v4"] }
anyhow = { version = "=1.0.79", features = [] }
num-bigint = "=0.4.3"
num-traits = "=0.2.15"
num-integer = "=0.1.45"
byteorder = "=1.4.3"
bytebuffer = "=0.2.1"
hex = "=0.4.3"
digest = "=0.10.6"

