[package]
name = "tcx-tron"
version = "0.1.0"
authors = ["tyrone <2125081@qq.com>"]
edition = "2021"

[dependencies]
tcx-crypto = { path = "../tcx-crypto" }
tcx-keystore = { path = "../tcx-keystore" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-constants = { path = "../tcx-constants" }
tcx-common = { path = "../tcx-common" }

prost = "=0.14.3"
bytes = "=1.11.1"

hex-literal = "=1.1.0"
bitcoin = "=0.32.9"
secp256k1 = {version = "=0.31.1", features = ["rand", "recovery"] }
tiny-bip39 = "=2.0.0"
bitcoin_hashes = "=0.20.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
uuid = { version = "=1.23.1", features = ["serde", "v4"] }
anyhow = { version = "=1.0.102", features = [] }
num-bigint = "=0.4.6"
num-traits = "=0.2.19"
num-integer = "=0.1.46"
byteorder = "=1.5.0"
bytebuffer = "=0.2.1"
hex = "=0.4.3"
digest = "=0.11.3"

